classDiagram
    class Command {
        <<interface>>
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    class IncomeCommand {
        -amount: double
        -description: String
        -date: LocalDate
        -tags: List~String~
        +IncomeCommand(amount, description, date, tags)
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    class ExpenseCommand {
        -amount: double
        -description: String
        -date: LocalDate
        -category: Category
        -tags: List~String~
        +ExpenseCommand(amount, description, date, category, tags)
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    class ListCommand {
        -limit: int
        -date: LocalDate
        +ListCommand(limit, date)
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    class DeleteCommand {
        -index: int
        +DeleteCommand(index)
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    class FilterCommand {
        -startDate: LocalDate
        -endDate: LocalDate
        +FilterCommand(startDate, endDate)
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    class SummaryCommand {
        -month: int
        -year: int
        +SummaryCommand(month, year)
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    class SearchCommand {
        -keyword: String
        +SearchCommand(keyword)
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    class BalanceCommand {
        -date: LocalDate
        +BalanceCommand(date)
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    class ExitCommand {
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    class HelpCommand {
        +execute(transactionManager, ui, storage): String
        +isExit(): boolean
    }

    Command <|.. IncomeCommand : implements
    Command <|.. ExpenseCommand : implements
    Command <|.. ListCommand : implements
    Command <|.. DeleteCommand : implements
    Command <|.. FilterCommand : implements
    Command <|.. SummaryCommand : implements
    Command <|.. SearchCommand : implements
    Command <|.. BalanceCommand : implements
    Command <|.. ExitCommand : implements
    Command <|.. HelpCommand : implements